--- a/tarkvaratehnika/backend/src/main/resources/application.properties
+++ b/tarkvaratehnika/backend/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/tvteh1?useSSL=false
 spring.datasource.username = root
-spring.datasource.password = ergo123
+spring.datasource.password = root
+
+server.port=8081
 
 
 ## Hibernate Properties
@@ -9,6 +11,6 @@ spring.datasource.password = ergo123
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.jackson.serialization.fail-on-empty-beans=false
